# op-reth

./: .gitignore  Cargo.toml
.github/workflows/: bench.yml  ci.yml  integration.yml  sanity.yml  unit.yml
crates/consensus/: Cargo.toml
crates/consensus/auto-seal/src/: lib.rs  task.rs
crates/consensus/beacon/: Cargo.toml
crates/consensus/beacon/src/: beacon_consensus.rs
crates/consensus/common/: Cargo.toml
crates/consensus/common/src/: validation.rs
crates/executor/src/: executor.rs
crates/exex/external-proofs/src/: storage.rs
crates/interfaces/: Cargo.toml
crates/interfaces/src/: executor.rs
crates/interfaces/src/blockchain_tree/: error.rs
crates/interfaces/src/test_utils/: generators.rs
crates/net/banlist/src/: lib.rs
crates/net/discv4/src/: lib.rs
crates/net/eth-wire/: Cargo.toml
crates/net/network/: Cargo.toml
crates/net/network-api/src/: lib.rs
crates/net/network/src/: manager.rs  network.rs  transactions.rs
crates/optimism/chainspec/src/: lib.rs
crates/payload/basic/: Cargo.toml
crates/payload/basic/src/: lib.rs  optimism.rs
crates/payload/builder/: Cargo.toml
crates/payload/builder/src/: error.rs  payload.rs
crates/payload/primitives/src/: lib.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: account.rs  basefee.rs  constants.rs  hardfork.rs  header.rs  lib.rs  proofs.rs  receipt.rs
crates/prune/src/: pruner.rs
crates/revm/: Cargo.toml
crates/revm/revm-inspectors/: Cargo.toml
crates/revm/revm-primitives/: Cargo.toml
crates/revm/revm-primitives/src/: env.rs
crates/revm/src/: database.rs  executor.rs  lib.rs  optimism.rs  processor.rs
crates/rpc/rpc/: Cargo.toml
crates/rpc/rpc-engine-api/: Cargo.toml
crates/rpc/rpc-types/: Cargo.toml
crates/storage/provider/: Cargo.toml
crates/transaction-pool/: Cargo.toml
crates/transaction-pool/src/: error.rs  lib.rs  maintain.rs  noop.rs  traits.rs
etc/grafana/dashboards/: overview.json
testing/ef-tests/src/: lib.rs  models.rs
(+54 files in other folders)
