[package]
name = "reth-basic-payload-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A basic payload builder for reth that uses the txpool API to build payloads."

[dependencies]
## reth
reth-primitives.workspace = true
reth-revm = { path = "../../revm" }
reth-transaction-pool.workspace = true
reth-rlp.workspace = true
reth-provider.workspace = true
reth-payload-builder.workspace = true
reth-tasks.workspace = true

## ethereum
revm.workspace = true

## async
tokio = { workspace = true, features = ["sync", "time"] }
futures-core = "0.3"
futures-util.workspace = true

# metrics
reth-metrics.workspace = true
metrics = "0.21.1" # Needed for `metrics-macro` to resolve the crate using `::metrics` notation

## misc
tracing.workspace = true

[dev-dependencies]
reth-db = { workspace = true, features = ["test-utils"] }
reth-auto-seal-consensus = { path = "../../consensus/auto-seal" }
reth-blockchain-tree = { workspace = true }
reth-rpc-types = { workspace = true }

[features]
optimism = [
  "reth-primitives/optimism",
  "reth-revm/optimism",
  "reth-transaction-pool/optimism",
  "reth-provider/optimism",
  "reth-payload-builder/optimism",
  "revm/optional_block_gas_limit",
  "revm/optional_eip3607",
  "revm/optional_no_base_fee",
  "revm/optional_balance_check",
  "revm/optional_gas_refund"
]
