[package]
name = "reth-revm-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "core reth specific revm utilities"

[dependencies]
reth-primitives = { path = "../../primitives" }
revm = { version = "3.0.0" }

[features]
optimism = []
